--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "serve:unified": "node unified-server.js",
+    "start": "npm run build && npm run serve:unified"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
