Update Jenkinsfile and GitHub Actions workflow to use unified Dockerfile and adjust port configurations for hrportal container

--- a/.github/workflows/create-infrastructure.yml
+++ b/.github/workflows/create-infrastructure.yml
@@ -241,8 +241,8 @@ jobs:
         FULL_ECR_REPOSITORY="${ECR_REGISTRY}/${{ env.ECR_REPOSITORY_NAME }}"
         echo "Full ECR Repository URL: ${FULL_ECR_REPOSITORY}"
         
-        # Build a docker container and push it to ECR
-        docker build -t ${FULL_ECR_REPOSITORY}:${{ github.sha }} .
+        # Build a docker container and push it to ECR using the unified Dockerfile
+        docker build -f Dockerfile.unified -t ${FULL_ECR_REPOSITORY}:${{ github.sha }} .
         docker push ${FULL_ECR_REPOSITORY}:${{ github.sha }}
         docker tag ${FULL_ECR_REPOSITORY}:${{ github.sha }} ${FULL_ECR_REPOSITORY}:latest
         docker push ${FULL_ECR_REPOSITORY}:latest
@@ -333,8 +333,8 @@ jobs:
         echo "RDS_USER: ${{ env.RDS_USER }}"
         echo "RDS_PASSWORD: ${{ env.RDS_PASSWORD }}"
         
-        # Create commands JSON string
-        COMMANDS_JSON='["docker stop hrportal || true", "docker rm hrportal || true", "aws ecr get-login-password --region '"${{ env.AWS_REGION }}"' | docker login --username AWS --password-stdin '"${{ steps.login-ecr.outputs.registry }}"'", "docker pull '"${{ steps.build-image.outputs.image }}"'", "docker run -d --name hrportal -p 80:80 -p 5001:5001 --network-alias=nomdservice --add-host=metadata.ec2.internal:127.0.0.1 --add-host=169.254.169.254:127.0.0.1 -e DB_HOST=\"'"$DB_HOST"'\" -e DB_USER=\"'"${{ env.RDS_USER }}"'\" -e DB_PASSWORD=\"'"${{ env.RDS_PASSWORD }}"'\" -e DB_NAME=\"'"${{ env.RDS_DATABASE }}"'\" -e FRONTEND_PORT=\"80\" -e BACKEND_PORT=\"5001\" --privileged -e VITE_BASE_URL=\"http://localhost\" '"${{ steps.build-image.outputs.image }}"'", "docker ps | grep hrportal"]'
+        # Create commands JSON string for unified server
+        COMMANDS_JSON='["docker stop hrportal || true", "docker rm hrportal || true", "aws ecr get-login-password --region '"${{ env.AWS_REGION }}"' | docker login --username AWS --password-stdin '"${{ steps.login-ecr.outputs.registry }}"'", "docker pull '"${{ steps.build-image.outputs.image }}"'", "docker run -d --name hrportal -p 80:8080 -p 8080:8080 --network-alias=nomdservice --add-host=metadata.ec2.internal:127.0.0.1 --add-host=169.254.169.254:127.0.0.1 -e DB_HOST=\"'"$DB_HOST"'\" -e DB_USER=\"'"${{ env.RDS_USER }}"'\" -e DB_PASSWORD=\"'"${{ env.RDS_PASSWORD }}"'\" -e DB_NAME=\"'"${{ env.RDS_DATABASE }}"'\" -e PORT=\"8080\" --privileged -e VITE_BASE_URL=\"http://localhost\" '"${{ steps.build-image.outputs.image }}"'", "docker ps | grep hrportal"]'
         
         echo "Using commands: $COMMANDS_JSON"
         
