--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
     "mysql2": "^3.13.0",
+    "node-serialize": "^0.0.4",
     "next-themes": "^0.3.0",
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
