--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,8 @@
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.13.0",
+    "node-serialize": "^0.0.4",
+    "uuid": "^9.0.0",
     "node-serialize": "0.0.4",
     "uuid": "^11.1.0"
   },
