Refactor installation scripts in Terraform configuration to detect OS and install dependencies accordingly. Implement OS-specific handling for Ubuntu/Debian and CentOS/RHEL/Fedora systems, enhancing the installation process for selinux-policy-devel. Update AWS CLI installation to include gnupg and create symlink for easier access. Remove Cortex XDR agent installation steps from user data scripts for app and Jenkins instances.

--- a/.github/workflows/create-infrastructure.yml
+++ b/.github/workflows/create-infrastructure.yml
@@ -525,7 +525,30 @@ jobs:
                 echo '# Log file for installation' >> xdr_install.sh
                 echo 'LOG_FILE="/var/log/xdr_install.log"' >> xdr_install.sh
                 echo '' >> xdr_install.sh
-                echo 'yum install selinux-policy-devel.noarch -y' >> xdr_install.sh
+                echo '# Detect OS and install dependencies accordingly' >> xdr_install.sh
+                echo 'if [ -f /etc/os-release ]; then' >> xdr_install.sh
+                echo '  . /etc/os-release' >> xdr_install.sh
+                echo '  OS=$ID' >> xdr_install.sh
+                echo 'elif [ -f /etc/redhat-release ]; then' >> xdr_install.sh
+                echo '  OS="centos"' >> xdr_install.sh
+                echo 'else' >> xdr_install.sh
+                echo '  OS=$(uname -s)' >> xdr_install.sh
+                echo 'fi' >> xdr_install.sh
+                echo '' >> xdr_install.sh
+                echo '# Install OS-specific dependencies' >> xdr_install.sh
+                echo 'case $OS in' >> xdr_install.sh
+                echo '  ubuntu|debian)' >> xdr_install.sh
+                echo '    log "Detected Ubuntu/Debian system"' >> xdr_install.sh
+                echo '    # Ubuntu doesnt need selinux-policy-devel' >> xdr_install.sh
+                echo '    ;;' >> xdr_install.sh
+                echo '  centos|rhel|fedora)' >> xdr_install.sh
+                echo '    log "Detected CentOS/RHEL/Fedora system"' >> xdr_install.sh
+                echo '    yum install selinux-policy-devel.noarch -y' >> xdr_install.sh
+                echo '    ;;' >> xdr_install.sh
+                echo '  *)' >> xdr_install.sh
+                echo '    log "Unknown OS: $OS"' >> xdr_install.sh
+                echo '    ;;' >> xdr_install.sh
+                echo 'esac' >> xdr_install.sh
                 echo '' >> xdr_install.sh
                 echo '# Function for logging' >> xdr_install.sh
                 echo 'log() {' >> xdr_install.sh
