--- a/.github/workflows/create-infrastructure.yml
+++ b/.github/workflows/create-infrastructure.yml
@@ -358,8 +358,43 @@ jobs:
         echo "RDS_USER: ${{ env.RDS_USER }}"
         echo "RDS_PASSWORD: ${{ env.RDS_PASSWORD }}"
         
+        # Wait for instance to be fully ready
+        echo "Checking if instance is ready for deployment..."
+        MAX_WAIT=300  # 5 minutes
+        WAIT_TIME=0
+        while [ $WAIT_TIME -lt $MAX_WAIT ]; do
+          # Check if deployment-ready marker exists
+          if aws ssm send-command \
+            --instance-ids ${{ env.APP_INSTANCE_ID }} \
+            --document-name "AWS-RunShellScript" \
+            --parameters 'commands=["test -f /tmp/deployment-ready && echo READY || echo NOT_READY"]' \
+            --query "Command.CommandId" \
+            --output text > /tmp/check_cmd_id 2>&1; then
+            
+            sleep 5
+            CHECK_OUTPUT=$(aws ssm get-command-invocation \
+              --command-id "$(cat /tmp/check_cmd_id)" \
+              --instance-id ${{ env.APP_INSTANCE_ID }} \
+              --query "StandardOutputContent" \
+              --output text 2>/dev/null || echo "")
+            
+            if [[ "$CHECK_OUTPUT" == *"READY"* ]]; then
+              echo "Instance is ready for deployment!"
+              break
+            fi
+          fi
+          
+          echo "Waiting for instance to be ready... ($WAIT_TIME/$MAX_WAIT seconds)"
+          sleep 10
+          WAIT_TIME=$((WAIT_TIME + 10))
+        done
+        
+        if [ $WAIT_TIME -ge $MAX_WAIT ]; then
+          echo "Warning: Timeout waiting for instance to be ready. Proceeding anyway..."
+        fi
+        
         # Create commands JSON string for unified server
-        COMMANDS_JSON='["docker stop hrportal || true", "docker rm hrportal || true", "aws ecr get-login-password --region '"${{ env.AWS_REGION }}"' | docker login --username AWS --password-stdin '"${{ steps.login-ecr.outputs.registry }}"'", "docker pull '"${{ steps.build-image.outputs.image }}"'", "docker run -d --name hrportal -p 80:8080 --add-host=metadata.ec2.internal:127.0.0.1 --add-host=169.254.169.254:127.0.0.1 -e DB_HOST=\"'"$DB_HOST"'\" -e DB_USER=\"'"${{ env.RDS_USER }}"'\" -e DB_PASSWORD=\"'"${{ env.RDS_PASSWORD }}"'\" -e DB_NAME=\"'"${{ env.RDS_DATABASE }}"'\" -e PORT=\"8080\" --privileged -e VITE_BASE_URL=\"http://localhost\" '"${{ steps.build-image.outputs.image }}"'", "docker ps | grep hrportal"]'
+        COMMANDS_JSON='["bash -c \"export PATH=/usr/local/bin:/usr/bin:/usr/local/sbin:/usr/sbin:\$PATH && docker stop hrportal || true && docker rm hrportal || true && aws ecr get-login-password --region '"${{ env.AWS_REGION }}"' | docker login --username AWS --password-stdin '"${{ steps.login-ecr.outputs.registry }}"' && docker pull '"${{ steps.build-image.outputs.image }}"' && docker run -d --name hrportal -p 80:8080 --add-host=metadata.ec2.internal:127.0.0.1 --add-host=169.254.169.254:127.0.0.1 -e DB_HOST=\\\"'"$DB_HOST"'\\\" -e DB_USER=\\\"'"${{ env.RDS_USER }}"'\\\" -e DB_PASSWORD=\\\"'"${{ env.RDS_PASSWORD }}"'\\\" -e DB_NAME=\\\"'"${{ env.RDS_DATABASE }}"'\\\" -e PORT=\\\"8080\\\" --privileged -e VITE_BASE_URL=\\\"http://localhost\\\" '"${{ steps.build-image.outputs.image }}"' && docker ps | grep hrportal\""]'
         
         echo "Using commands: $COMMANDS_JSON"
         
