--- a/.github/workflows/create-infrastructure.yml
+++ b/.github/workflows/create-infrastructure.yml
@@ -360,38 +360,78 @@ jobs:
         
         # Wait for instance to be fully ready
         echo "Checking if instance is ready for deployment..."
-        MAX_WAIT=300  # 5 minutes
+        MAX_WAIT=600  # 10 minutes (increased from 5)
         WAIT_TIME=0
+        INSTANCE_READY=false
+        
         while [ $WAIT_TIME -lt $MAX_WAIT ]; do
-          # Check if deployment-ready marker exists
+          # Check if Docker and AWS CLI are installed and ready
           if aws ssm send-command \
             --instance-ids ${{ env.APP_INSTANCE_ID }} \
             --document-name "AWS-RunShellScript" \
-            --parameters 'commands=["test -f /tmp/deployment-ready && echo READY || echo NOT_READY"]' \
+            --parameters 'commands=["which docker && which aws && systemctl is-active docker && echo TOOLS_READY || echo TOOLS_NOT_READY"]' \
             --query "Command.CommandId" \
             --output text > /tmp/check_cmd_id 2>&1; then
             
-            sleep 5
+            sleep 10  # Give more time for command to complete
             CHECK_OUTPUT=$(aws ssm get-command-invocation \
               --command-id "$(cat /tmp/check_cmd_id)" \
               --instance-id ${{ env.APP_INSTANCE_ID }} \
               --query "StandardOutputContent" \
               --output text 2>/dev/null || echo "")
             
-            if [[ "$CHECK_OUTPUT" == *"READY"* ]]; then
-              echo "Instance is ready for deployment!"
+            if [[ "$CHECK_OUTPUT" == *"TOOLS_READY"* ]]; then
+              echo "✅ Instance is ready for deployment! Docker and AWS CLI are installed."
+              INSTANCE_READY=true
               break
+            else
+              echo "Tools not ready yet. Output: $CHECK_OUTPUT"
             fi
           fi
           
           echo "Waiting for instance to be ready... ($WAIT_TIME/$MAX_WAIT seconds)"
-          sleep 10
-          WAIT_TIME=$((WAIT_TIME + 10))
+          sleep 15  # Increased wait time between checks
+          WAIT_TIME=$((WAIT_TIME + 15))
         done
         
-        if [ $WAIT_TIME -ge $MAX_WAIT ]; then
-          echo "Warning: Timeout waiting for instance to be ready. Proceeding anyway..."
+        if [ "$INSTANCE_READY" != "true" ]; then
+          echo "::error::Instance did not become ready within $MAX_WAIT seconds. Docker or AWS CLI may not be installed."
+          
+          # Try to get diagnostic information
+          echo "Attempting to get diagnostic information..."
+          aws ssm send-command \
+            --instance-ids ${{ env.APP_INSTANCE_ID }} \
+            --document-name "AWS-RunShellScript" \
+            --parameters 'commands=["tail -n 50 /var/log/user-data.log || echo No user-data log found"]' \
+            --query "Command.CommandId" \
+            --output text > /tmp/diag_cmd_id 2>&1 || true
+          
+          sleep 5
+          aws ssm get-command-invocation \
+            --command-id "$(cat /tmp/diag_cmd_id)" \
+            --instance-id ${{ env.APP_INSTANCE_ID }} \
+            --query "StandardOutputContent" \
+            --output text 2>/dev/null || echo "Could not retrieve diagnostic logs"
+          
+          exit 1
         fi
+        
+        # Pre-deployment verification
+        echo "Running pre-deployment verification..."
+        VERIFY_CMD=$(aws ssm send-command \
+          --instance-ids ${{ env.APP_INSTANCE_ID }} \
+          --document-name "AWS-RunShellScript" \
+          --parameters 'commands=["echo \"=== Pre-deployment verification ===\"","docker --version","aws --version","systemctl status docker --no-pager | head -10","ls -la /usr/bin/docker /usr/local/bin/aws","echo \"=== Verification complete ===\""]' \
+          --query "Command.CommandId" \
+          --output text)
+        
+        sleep 10
+        echo "Verification output:"
+        aws ssm get-command-invocation \
+          --command-id "$VERIFY_CMD" \
+          --instance-id ${{ env.APP_INSTANCE_ID }} \
+          --query "StandardOutputContent" \
+          --output text
         
         # Create commands JSON string for unified server
         COMMANDS_JSON='["bash -c \"export PATH=/usr/local/bin:/usr/bin:/usr/local/sbin:/usr/sbin:\$PATH && docker stop hrportal || true && docker rm hrportal || true && aws ecr get-login-password --region '"${{ env.AWS_REGION }}"' | docker login --username AWS --password-stdin '"${{ steps.login-ecr.outputs.registry }}"' && docker pull '"${{ steps.build-image.outputs.image }}"' && docker run -d --name hrportal -p 80:8080 --add-host=metadata.ec2.internal:127.0.0.1 --add-host=169.254.169.254:127.0.0.1 -e DB_HOST=\\\"'"$DB_HOST"'\\\" -e DB_USER=\\\"'"${{ env.RDS_USER }}"'\\\" -e DB_PASSWORD=\\\"'"${{ env.RDS_PASSWORD }}"'\\\" -e DB_NAME=\\\"'"${{ env.RDS_DATABASE }}"'\\\" -e PORT=\\\"8080\\\" --privileged -e VITE_BASE_URL=\\\"http://localhost\\\" '"${{ steps.build-image.outputs.image }}"' && docker ps | grep hrportal\""]'
