--- a/.github/workflows/create-infrastructure.yml
+++ b/.github/workflows/create-infrastructure.yml
@@ -630,8 +630,36 @@ jobs:
                 echo '  echo "[$(date '"'"'+%Y-%m-%d %H:%M:%S'"'"')] $1" | tee -a "$LOG_FILE"' >> xdr_install.sh
                 echo '}' >> xdr_install.sh
                 echo '' >> xdr_install.sh
+                echo '# Function to install AWS CLI if missing' >> xdr_install.sh
+                echo 'ensure_aws_cli() {' >> xdr_install.sh
+                echo '  if ! command -v aws &> /dev/null; then' >> xdr_install.sh
+                echo '    log "AWS CLI not found, installing..."' >> xdr_install.sh
+                echo '    cd /tmp' >> xdr_install.sh
+                echo '    curl -s "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"' >> xdr_install.sh
+                echo '    unzip -q awscliv2.zip' >> xdr_install.sh
+                echo '    ./aws/install' >> xdr_install.sh
+                echo '    rm -rf awscliv2.zip aws/' >> xdr_install.sh
+                echo '    # Add to PATH for current session' >> xdr_install.sh
+                echo '    export PATH="/usr/local/bin:$PATH"' >> xdr_install.sh
+                echo '    if ! command -v aws &> /dev/null; then' >> xdr_install.sh
+                echo '      log "ERROR: Failed to install AWS CLI"' >> xdr_install.sh
+                echo '      return 1' >> xdr_install.sh
+                echo '    fi' >> xdr_install.sh
+                echo '    log "AWS CLI installed successfully"' >> xdr_install.sh
+                echo '  else' >> xdr_install.sh
+                echo '    log "AWS CLI found at: $(which aws)"' >> xdr_install.sh
+                echo '  fi' >> xdr_install.sh
+                echo '  return 0' >> xdr_install.sh
+                echo '}' >> xdr_install.sh
+                echo '' >> xdr_install.sh
                 echo '# Start installation process' >> xdr_install.sh
                 echo 'log "Starting Cortex XDR installation"' >> xdr_install.sh
+                echo '' >> xdr_install.sh
+                echo '# Ensure AWS CLI is available' >> xdr_install.sh
+                echo 'ensure_aws_cli' >> xdr_install.sh
+                echo 'if [ $? -ne 0 ]; then' >> xdr_install.sh
+                echo '  exit 1' >> xdr_install.sh
+                echo 'fi' >> xdr_install.sh
                 echo '' >> xdr_install.sh
                 echo '# Create temporary directory for download' >> xdr_install.sh
                 echo 'TEMP_DIR=$(mktemp -d)' >> xdr_install.sh
@@ -741,11 +769,58 @@ jobs:
                   echo "App Instance ID: $APP_INSTANCE_ID"
                   echo "Jenkins Instance ID: $JENKINS_INSTANCE_ID"
                   
+                  # Add a delay to ensure instances have completed their user_data scripts
+                  echo "Waiting 2 minutes for instances to complete initialization..."
+                  sleep 120
+                  
                   # Install XDR on both instances
                   for INSTANCE_ID in "$APP_INSTANCE_ID" "$JENKINS_INSTANCE_ID"; do
                     # Skip if instance ID is empty
                     if [ -z "$INSTANCE_ID" ]; then
                       echo "::warning::Empty instance ID, skipping XDR installation for this instance"
+                      continue
+                    fi
+                    
+                    # Check if instance is ready (AWS CLI installed and user_data completed)
+                    echo "Checking if instance $INSTANCE_ID is ready for XDR installation..."
+                    READY_CHECK_CMD="command -v aws >/dev/null 2>&1 && [ -f /tmp/deployment-ready ] && echo 'READY' || echo 'NOT_READY'"
+                    
+                    # Try up to 10 times with 30 second intervals (5 minutes total)
+                    READY_ATTEMPTS=0
+                    MAX_READY_ATTEMPTS=10
+                    INSTANCE_READY=false
+                    
+                    while [ $READY_ATTEMPTS -lt $MAX_READY_ATTEMPTS ]; do
+                      READY_STATUS=$(aws ssm send-command \
+                        --instance-ids "$INSTANCE_ID" \
+                        --document-name "AWS-RunShellScript" \
+                        --parameters "commands=$READY_CHECK_CMD" \
+                        --query "Command.CommandId" \
+                        --output text 2>/dev/null || echo "FAILED")
+                      
+                      if [ "$READY_STATUS" != "FAILED" ]; then
+                        sleep 5  # Give command time to execute
+                        
+                        READY_OUTPUT=$(aws ssm get-command-invocation \
+                          --command-id "$READY_STATUS" \
+                          --instance-id "$INSTANCE_ID" \
+                          --query "StandardOutputContent" \
+                          --output text 2>/dev/null || echo "")
+                        
+                        if echo "$READY_OUTPUT" | grep -q "READY"; then
+                          echo "✅ Instance $INSTANCE_ID is ready for XDR installation"
+                          INSTANCE_READY=true
+                          break
+                        fi
+                      fi
+                      
+                      READY_ATTEMPTS=$((READY_ATTEMPTS + 1))
+                      echo "Instance $INSTANCE_ID not ready yet (attempt $READY_ATTEMPTS/$MAX_READY_ATTEMPTS). Waiting 30 seconds..."
+                      sleep 30
+                    done
+                    
+                    if [ "$INSTANCE_READY" = false ]; then
+                      echo "::warning::Instance $INSTANCE_ID is not ready after $MAX_READY_ATTEMPTS attempts. Skipping XDR installation."
                       continue
                     fi
                     
@@ -885,7 +960,7 @@ jobs:
         echo "## 🚀 Deployment URLs" >> $GITHUB_STEP_SUMMARY
         
         if [ -n "${{ env.APP_ALB_URL }}" ]; then
-          echo "* **Application (ALB)**: [${{ env.APP_ALB_URL }}](${{ env.APP_ALB_URL }})" >> $GITHUB_STEP_SUMMARY
+                      echo "* **Application (ALB)**: [${{ env.APP_ALB_URL }}](${{ env.APP_ALB_URL }})" >> $GITHUB_STEP_SUMMARY
         fi
         
         if [ -n "$EC2_IP" ] && [ "$EC2_IP" != "None" ]; then
