--- a/.github/workflows/create-infrastructure.yml
+++ b/.github/workflows/create-infrastructure.yml
@@ -769,6 +769,66 @@ jobs:
                   echo "App Instance ID: $APP_INSTANCE_ID"
                   echo "Jenkins Instance ID: $JENKINS_INSTANCE_ID"
                   
+                  # Initialize status tracking
+                  APP_AWS_CLI="Unknown"
+                  APP_XDR="Not Attempted"
+                  JENKINS_AWS_CLI="Unknown"
+                  JENKINS_XDR="Not Attempted"
+                  
+                  # Check AWS CLI status on both instances
+                  echo "Checking AWS CLI installation status..."
+                  
+                  # Check App instance
+                  AWS_CHECK_CMD="command -v aws >/dev/null 2>&1 && aws --version || echo 'AWS CLI not found'"
+                  APP_AWS_CHECK=$(aws ssm send-command \
+                    --instance-ids "$APP_INSTANCE_ID" \
+                    --document-name "AWS-RunShellScript" \
+                    --parameters "commands=$AWS_CHECK_CMD" \
+                    --query "Command.CommandId" \
+                    --output text 2>/dev/null || echo "")
+                  
+                  if [ -n "$APP_AWS_CHECK" ]; then
+                    sleep 3
+                    APP_AWS_OUTPUT=$(aws ssm get-command-invocation \
+                      --command-id "$APP_AWS_CHECK" \
+                      --instance-id "$APP_INSTANCE_ID" \
+                      --query "StandardOutputContent" \
+                      --output text 2>/dev/null || echo "")
+                    
+                    if echo "$APP_AWS_OUTPUT" | grep -q "aws-cli"; then
+                      APP_AWS_CLI="✅ Installed"
+                      echo "✅ AWS CLI is installed on App instance"
+                    else
+                      APP_AWS_CLI="❌ Not Found"
+                      echo "❌ AWS CLI not found on App instance"
+                    fi
+                  fi
+                  
+                  # Check Jenkins instance
+                  JENKINS_AWS_CHECK=$(aws ssm send-command \
+                    --instance-ids "$JENKINS_INSTANCE_ID" \
+                    --document-name "AWS-RunShellScript" \
+                    --parameters "commands=$AWS_CHECK_CMD" \
+                    --query "Command.CommandId" \
+                    --output text 2>/dev/null || echo "")
+                  
+                  if [ -n "$JENKINS_AWS_CHECK" ]; then
+                    sleep 3
+                    JENKINS_AWS_OUTPUT=$(aws ssm get-command-invocation \
+                      --command-id "$JENKINS_AWS_CHECK" \
+                      --instance-id "$JENKINS_INSTANCE_ID" \
+                      --query "StandardOutputContent" \
+                      --output text 2>/dev/null || echo "")
+                    
+                    if echo "$JENKINS_AWS_OUTPUT" | grep -q "aws-cli"; then
+                      JENKINS_AWS_CLI="✅ Installed"
+                      echo "✅ AWS CLI is installed on Jenkins instance"
+                    else
+                      JENKINS_AWS_CLI="❌ Not Found"
+                      echo "❌ AWS CLI not found on Jenkins instance"
+                    fi
+                  fi
+                  
                   # Install XDR on both instances
                   for INSTANCE_ID in "$APP_INSTANCE_ID" "$JENKINS_INSTANCE_ID"; do
                     # Skip if instance ID is empty
@@ -824,11 +884,20 @@ jobs:
                         
                         if [ "$SSM_STATUS" == "Success" ]; then
                           echo "✅ XDR installation on instance $INSTANCE_ID completed successfully."
+                          if [ "$INSTANCE_ID" == "$APP_INSTANCE_ID" ]; then
+                            APP_XDR="✅ Installed"
+                          else
+                            JENKINS_XDR="✅ Installed"
+                          fi
                           break
                         elif [ "$SSM_STATUS" == "Failed" ]; then
                           echo "⚠️ XDR installation on instance $INSTANCE_ID encountered an issue. See logs for details."
                           echo "::warning::XDR installation failed on instance $INSTANCE_ID."
-                          echo "::notice::XDR Agent installation failed on instance $INSTANCE_ID: Installation script error"
+                          if [ "$INSTANCE_ID" == "$APP_INSTANCE_ID" ]; then
+                            APP_XDR="❌ Failed"
+                          else
+                            JENKINS_XDR="❌ Failed"
+                          fi
                           # Get the command output to understand the failure
                           aws ssm get-command-invocation \
                             --command-id "$SSM_COMMAND_ID" \
@@ -857,6 +926,12 @@ jobs:
                   done
                 fi
               fi
+              
+              # Export status variables for the deployment summary
+              echo "APP_AWS_CLI=$APP_AWS_CLI" >> $GITHUB_ENV
+              echo "APP_XDR=$APP_XDR" >> $GITHUB_ENV
+              echo "JENKINS_AWS_CLI=$JENKINS_AWS_CLI" >> $GITHUB_ENV
+              echo "JENKINS_XDR=$JENKINS_XDR" >> $GITHUB_ENV
             fi
           else
             echo "⚠️ No .tar.gz files found in xdr_install directory."
@@ -922,11 +997,21 @@ jobs:
         
         if [ -n "$JENKINS_IP" ] && [ "$JENKINS_IP" != "None" ]; then
           echo "* **Jenkins Server**: [http://$JENKINS_IP:8080](http://$JENKINS_IP:8080)" >> $GITHUB_STEP_SUMMARY
-          echo "  * Username: `admin`" >> $GITHUB_STEP_SUMMARY
-          echo "  * Password: `admin123`" >> $GITHUB_STEP_SUMMARY
+          echo "  * Username: \`admin\`" >> $GITHUB_STEP_SUMMARY
+          echo "  * Password: \`admin123\`" >> $GITHUB_STEP_SUMMARY
         fi
         
         echo "* **Terraform State Bucket**: \`${{ env.TF_STATE_BUCKET }}\`" >> $GITHUB_STEP_SUMMARY
+        
+        # Add installation status summary
+        echo "" >> $GITHUB_STEP_SUMMARY
+        echo "## 📦 Installation Status" >> $GITHUB_STEP_SUMMARY
+        echo "" >> $GITHUB_STEP_SUMMARY
+        echo "| Instance | AWS CLI | XDR Agent |" >> $GITHUB_STEP_SUMMARY
+        echo "|----------|---------|-----------|" >> $GITHUB_STEP_SUMMARY
+        echo "| **App Instance** | ${APP_AWS_CLI:-Unknown} | ${APP_XDR:-Not Attempted} |" >> $GITHUB_STEP_SUMMARY
+        echo "| **Jenkins Instance** | ${JENKINS_AWS_CLI:-Unknown} | ${JENKINS_XDR:-Not Attempted} |" >> $GITHUB_STEP_SUMMARY
+        echo "" >> $GITHUB_STEP_SUMMARY
         
         echo "Terraform state is stored in S3 bucket: ${{ env.TF_STATE_BUCKET }}"
         echo "To destroy this infrastructure, use the Destroy Infrastructure workflow with this bucket name." 
